[package]
name = "amzn-smt-eager-arithmetic"
version = "0.1.0"
authors = ["Max Heller <maxhelle@amazon.com>"]
edition = "2018"

# Setting publish to false prevents the accidental publishing
# of your code to (the public) crates.io, as described here:
#
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-publish--field-optional
#
# Those who knowingly wish to publish their code will have to
# manually remove this line and have it reviewed by your team,
# AppSec, InfoSec, the Open Source group, or other parties.
publish = false

[dependencies]
aws-smt-ir = "0.3"
anyhow = "1.0"
either = "1.6"
ena = "0.14"
itertools = "0.11.0"
num-traits = "0.2"
smallvec = { version = "1.6", features = ["union"] }
clap = { version = "4.3", features = ["derive"]}
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5.1"

[features]
varisat = ["aws-smt-ir/varisat"]

[[bench]]
name = "presburger_encoding"
harness = false